# luthier

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  collect_pytorch_cuda_libs.py  requirements.in  requirements_lock.txt
cuda_test/: BUILD.bazel  cuda_test.py
datasets/lakh/: BUILD.bazel  filter_valid_midi_files.py
datasets/vgmusic/: BUILD.bazel
src/composition/: BUILD.bazel  game_genres.py  game_moods.py
src/composition/inference/: BUILD.bazel  latent_runner.py
src/composition/midi/: BUILD.bazel  rhythm_quantizer.py  tempo_normalizer.py  tokenizer.py  velocity_quantizer.py
src/composition/midi/tests/: rhythm_quantizer_test.py  tokenizer_test.py
src/composition/model/: BUILD.bazel  bar_cached_cross_attention.py  conductor_model.py  control_encoder.py  input_embeddings.py  instrument_count_head.py  latent_interpolator.py  latent_net.py  latent_prior_net.py  model.py  time_aware_embedding.py  utils.py
src/composition/model/tests/: conductor_model_test.py  control_encoder_test.py  input_embeddings_test.py  latent_interpolator_test.py  time_aware_embedding_test.py
src/composition/training/: BUILD.bazel  dataset_resolver.py  train_latent.py
src/composition/training/config/: BUILD.bazel  base.yaml  config.py  latent_pretrain.yaml  model.yaml
src/composition/training/losses/: BUILD.bazel  instrument_activation_loss.py  instrument_counts_loss.py  instrument_density_loss.py  latent_loss.py  tempo_loss.py
src/composition/training/losses/tests/: instrument_activation_loss_test.py  instrument_counts_loss_test.py  instrument_density_loss_test.py  latent_loss_test.py
src/composition/training/training_data/: BUILD.bazel  midi_parser.py  midi_player.py  midi_tagger.py
src/composition/training/training_data/dataloader/: BUILD.bazel  base_loader.py  midi_dataset_loader.py  supervised_loader.py  unsupervised_loader.py  utils.py
src/composition/training/training_data/dataloader/tests/: utils_test.py
src/composition/training/training_data/lakh/: BUILD.bazel  cluster_id_to_name.yaml  config.yaml  game_genres_mapping.yaml  lakh.py  loader.py  parser.py  parser_runner.py  tag_clustering.py  tag_clustering_config.yaml  test_loader.py
src/composition/training/training_data/vgmusic/: BUILD.bazel  scraper.py
