bazel_version = "8.2.1"

module(
    name = "luthier",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "rules_python", version = "1.3.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")

python.toolchain(
    configure_coverage_tool = True,
    is_default = True,
    python_version = "3.13",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")

pip.parse(
    hub_name = "pypi",
    requirements_lock = "//:requirements_lock.txt",
    python_version = "3.13",
)

use_repo(pip, "pypi")