load("@rules_python//python:defs.bzl", "py_binary")

py_binary(
    name = "test_cuda",
    srcs = ["cuda_test.py"],
    data = ["//third_party/pytorch_cuda_libs:cuda_so_files"],
    env = {
        "LD_LIBRARY_PATH": "third_party/pytorch_cuda_libs/lib",
    },
    main = "cuda_test.py",
    deps = [
        "@pypi//torch",
        "@pypi//torchaudio",
        "@pypi//torchvision",
    ],
)
