load("@rules_python//python:defs.bzl", "py_binary", "py_library")

py_library(
    name = "midi_player",
    srcs = ["midi_player.py"],
)

py_binary(
    name = "midi_tagger",
    srcs = ["midi_tagger.py"],
    main = "midi_tagger.py",
    deps = [
        ":midi_player",
        "//src/composition:game_genres",
        "//src/composition:game_moods",
        "@pypi//click",
        "@pypi//requests",
    ],
)
