load("@rules_python//python:defs.bzl", "py_library", "py_test")

py_library(
    name = "midi_dataset_loader",
    srcs = [
        "base_loader.py",
        "midi_dataset_loader.py",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":utils",
        "//src/composition/midi:tokenizer",
        "//src/composition/midi:velocity_quantizer",
        "@pypi//numpy",
        "@pypi//torch",
    ],
)

py_library(
    name = "utils",
    srcs = ["utils.py"],
    visibility = ["//visibility:public"],
    deps = ["@pypi//torch"],
)

py_test(
    name = "utils_test",
    timeout = "short",
    srcs = ["tests/utils_test.py"],
    data = [
        "//datasets/lakh:lmd_full",
        "//datasets/vgmusic:xbox360",
        "//third_party/pytorch_cuda_libs:cuda_so_files",
    ],
    env = {
        "LD_LIBRARY_PATH": "third_party/pytorch_cuda_libs/lib",
    },
    deps = [
        ":utils",
        "//src/composition/midi:tokenizer",
        "@bazel_tools//tools/python/runfiles",
        "@pypi//numpy",
        "@pypi//pytest",
    ],
)
