
py_library(
    name = "parser",
    srcs = ["parser.py"],
    data = [
        "config.yaml",
    ],
    deps = [
        "@bazel_tools//tools/python/runfiles", 
        "@pypi//tables",
        "@pypi//pyyaml",
        "@pypi//numpy",
        "@pypi//tqdm",
        "@pypi//scikit_learn",
        "@pypi//matplotlib",
        "@pypi//hdbscan",
        "@pypi//umap_learn"
    ],
)

py_binary(
    name = "parser_runner",
    srcs = [
        "parser_runner.py", 
        "hdf5_getters.py",
    ],
    main = "parser_runner.py",
    deps = [
        ":parser",
        "@pypi//click",
    ],
)