load("@rules_python//python:defs.bzl", "py_binary", "py_library")

py_library(
    name = "lakh",
    srcs = ["lakh.py"],
)

py_binary(
    name = "tag_clustering",
    srcs = [
        "hdf5_getters.py",
        "tag_clustering.py",
    ],
    data = [
        "tag_clustering_config.yaml",
        "//third_party/pytorch_cuda_libs:cuda_so_files",
    ],
    env = {
        "LD_LIBRARY_PATH": "third_party/pytorch_cuda_libs/lib",
    },
    main = "tag_clustering.py",
    deps = [
        ":lakh",
        "@bazel_tools//tools/python/runfiles",
        "@pypi//click",
        "@pypi//hdbscan",
        "@pypi//matplotlib",
        "@pypi//numpy",
        "@pypi//pyyaml",
        "@pypi//scikit_learn",
        "@pypi//sentence_transformers",
        "@pypi//tables",
        "@pypi//tqdm",
        "@pypi//umap_learn",
    ],
)
